# vyntr

./: .gitignore  CONTRIBUTE.md  CONTRIBUTORS.md  Cargo.toml  ONBOARDING.md  README.md  schema.sql
.github/: CODEOWNERS  dependabot.yml  issue-labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: code_review.md  default.md
.github/workflows/: ci.yml  dependency-updates.yml  issue-labeler.yml  pr-labeler.yml  python.yml  rust-ci.yml  rust.yml  security.yml  stale.yml  sveltekit-ci.yml
data/: proxies.txt  sites.txt
genesis/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  schema.sql
genesis/src/: crawler.rs  db.rs  fingerprint.rs  html_parser.rs  logger.rs  main.rs  metrics.rs  network.rs  proxy.rs  utils.rs
genesis/tools/: .gitignore  README.md  package.json
genesis/tools/database/: README.md  init.sql
genesis/tools/dataset/: README.md  content_cleaner.js  find_largest.js  remove_largest.js
genesis/tools/embedding/: README.md  benchmark.py  generate_embeddings.py  merge_embeddings.py  partition_benchmark.py  price.py  pyproject.toml  search_repl.py
genesis/tools/misc/: README.md
lexicon/: .gitignore  Cargo.toml  README.md  bun.lockb  index.ts  package.json
lexicon/src/: main.rs
lexicon/tools/: README.md  convert_wn_xml_to_json.py  migration.sql  pyproject.toml
lexicon/tools/src/: install_spelling_data.py  load_wordnet_into_db.py
pulse/: Cargo.toml  README.md
pulse/migrations/: add_indexes.sql
pulse/src/: main.rs  models.rs
src/: db.rs  fingerprint.rs  logger.rs  main.rs  meta_tags.rs  proxy.rs
tools/: bun.lockb  proxies.txt  proxy.js
website/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  drizzle.config.ts  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
website/drizzle/: 0000_pretty_morgan_stark.sql  0001_romantic_lockheed.sql  0002_regular_wildside.sql  0003_fast_boom_boom.sql  0004_heavy_centennial.sql  0005_silly_hellion.sql  0006_supreme_echo.sql  0007_brief_stryfe.sql  0008_serious_gertrude_yorkes.sql  0009_loose_blindfold.sql  0010_gray_sway.sql  0011_youthful_abomination.sql  0012_vengeful_vanisher.sql  0013_strange_darkhawk.sql  0014_cynical_thunderball.sql  0015_charming_wild_child.sql  0016_solid_vampiro.sql  0017_condemned_human_fly.sql  0018_flat_sage.sql  0019_cultured_ulik.sql  0020_luxuriant_blacklash.sql  0020_mute_mattie_franklin.sql  0020_overjoyed_psynapse.sql  0021_glamorous_morph.sql  0022_overrated_justin_hammer.sql  0023_curly_madelyne_pryor.sql  0024_mushy_guardian.sql
website/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  0008_snapshot.json  0009_snapshot.json  0010_snapshot.json  0011_snapshot.json  0012_snapshot.json  0013_snapshot.json  0014_snapshot.json  0015_snapshot.json  0016_snapshot.json  0017_snapshot.json  0018_snapshot.json  0019_snapshot.json  0020_snapshot.json  0021_snapshot.json  0022_snapshot.json  0023_snapshot.json  0024_snapshot.json  _journal.json
website/src/: app.css  app.html  hooks.server.ts
website/src/lib/: auth-client.ts  auth.ts  bangs.ts  constants.ts  dateUtils.ts  mathUtils.ts  timeUtils.ts  timerUtils.ts  utils.ts
website/src/lib/server/: admin.ts  authHelper.ts  bliptext.ts  db.ts  heuristicsSpellingCorrectionFilter.ts  schema.ts  search.ts  seed.sql  spellingCorrection.ts  summaries.ts  wordnet.ts
website/src/lib/stores/: sidebar.ts  subscription.ts
website/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte
(+94 files in other folders)
