[package]
name = "search-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
reqwest = "0.12.12"
scraper = "0.23.1"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-uuid-1"] }
