[package]
name = "search-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
reqwest = "0.12.12"
scraper = "0.23.1"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros", "tls-native-tls"] }
url = "2.5.4"
serde_json = "1.0.139"
futures = "0.3.31"
