[package]
name = "search-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
reqwest = { version = "0.12.12", features = ["rustls-tls"] }
scraper = "0.23.1"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "time", "sync", "io-util"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros", "tls-native-tls"] }
url = "2.5.4"
serde_json = "1.0.139"
futures = "0.3.31"
leaky-bucket = "1.0"
rand = { version = "0.9.0", features = ["std"] }
tokio-stream = "0.1.17"
