[package]
name = "search-rust"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
dotenvy = "0.15.7"
reqwest = { version = "0.12.12", features = ["rustls-tls"] }
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "time", "sync", "io-util"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.79.0"
url = "2.5.4"
serde_json = "1.0.139"
futures = "0.3.31"
rand = { version = "0.9.0", features = ["std"] }
tokio-stream = "0.1.17"
lazy_static = "1.4"
chrono = "0.4"
colored = "2.0"
lol_html = "2.2.0"
uuid = { version = "1.16.0", features = ["v4"] }
md5 = "0.7.0"
