[package]
name = "pulse"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }
tantivy = "0.20"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
dotenv = "0.15"
zstd-safe = "=5.0.2"
zstd-sys = "=2.0.8+zstd.1.5.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
fs2 = "0.4"
