[package]
name = "pulse"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tantivy = "0.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fs2 = "0.4"
